After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677039 - Wrong allocation for WIDTH_FOR_HEIGHT actors
Wrong allocation for WIDTH_FOR_HEIGHT actors
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: ClutterActor
git master
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-05-29 15:38 UTC by Emanuele Aina
Modified: 2012-05-31 12:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix width-for-height allocations (997 bytes, patch)
2012-05-29 15:42 UTC, Emanuele Aina
committed Details | Review

Description Emanuele Aina 2012-05-29 15:38:42 UTC
In the clutter-actor.c:clutter_actor_adjust_allocation() function clutter_actor_get_preferred_height() is used instead of clutter_actor_get_preferred_width() even fot the width-for-height case, giving some unexpected results.
Comment 1 Emanuele Aina 2012-05-29 15:42:03 UTC
Created attachment 215190 [details] [review]
Fix width-for-height allocations
Comment 2 Emmanuele Bassi (:ebassi) 2012-05-29 17:05:49 UTC
Review of attachment 215190 [details] [review]:

ah, right - clear copy and paste thinko.
Comment 3 Emmanuele Bassi (:ebassi) 2012-05-31 12:01:43 UTC
Attachment 215190 [details] pushed as 7f9c397 - Fix width-for-height allocations