Fix width-for-height allocations

https://bugzilla.gnome.org/show_bug.cgi?id=677039